# snakesnladders_for_real

./: .gitignore  README.md
project/: CMakeLists.txt
project/resources/: basic.txt
project/src/headers/: board.h  board_utils.h  common.h  game.h  menu.h  square.h  state.h  utils.h
project/src/sources/: board.c  board_utils.c  game.c  main.c  menu.c  square.c  state.c  utils.c
